# Clinic_03

./: pyproject.toml
Clinic/: .env  __init__.py  run.py
Clinic/actions/: action_route.py
Clinic/admin/: __init__.py  actions_route.py  analysis_route.py  auth_route.py  doctors_routes.py  reviews_route.py
Clinic/admin/bl_models/: analysis_bl.py
Clinic/admin/dal_models/: analysis_dal.py
Clinic/analysis/: __init__.py  analysis_routes.py
Clinic/bl_models/: actions_bl.py  admin_bl.py  analysis_bl.py  doctors_bl.py  records_bl.py  service_bl.py  services_bl.py
Clinic/dal_models/: actions_dal.py  admin_dal.py  analysis_dal.py  doctors_dal.py  records_dal.py  service_dal.py  services_dal.py
Clinic/doctors/: __init__.py  doctors_routes.py
Clinic/records/: __init__.py  bids_route.py  records_route.py
Clinic/services/: service_routes.py
clinic/: __init__.py  config.py  run.py
clinic/actions/: __init__.py
clinic/admin/: __init__.py  actions_route.py  analysis_route.py  auth_route.py  doctors_routes.py  records_route.py  services_route.py
clinic/analysis/: __init__.py  analysis_routes.py
clinic/appointments/: __init__.py  appointments_routes.py
clinic/bl_models/: admin_bl.py  analysis_bl.py  appointments_bl.py  doctors_bl.py  records_bl.py  services_bl.py
clinic/dal_models/: admin_dal.py  analysis_dal.py  doctors_dal.py  records_dal.py  services_dal.py
clinic/doctors/: doctors_routes.py
clinic/records/: __init__.py  bids_route.py  records_route.py  records_routes.py
clinic/services/: __init__.py  service_routes.py
(+10 files in other folders)
